add MR comments